--- a/back/willfree/src/main/resources/application.properties
+++ b/back/willfree/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://{ip address}/{database}
-spring.datasource.username={user name}
-spring.datasource.password={password}
+spring.datasource.url=jdbc:mysql://192.168.100.178/willfree
+spring.datasource.username=willianhora
+spring.datasource.password=152535
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
