--- a/back/willfree/src/main/resources/application.properties
+++ b/back/willfree/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://192.168.100.178/willfree
+spring.datasource.url=jdbc:mysql://192.168.100.153/willfree
 spring.datasource.username=willianhora
-spring.datasource.password=152535
+spring.datasource.password=82641269!@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
