--- a/back/willfree/src/main/resources/application.properties
+++ b/back/willfree/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://{ip}/{database}
 spring.datasource.username={user}
-spring.datasource.password={password}
+spring.datasource.password={psswd}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
